--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-<<<<<<< HEAD
-node_modules
-archive
-package-lock.json
-dist/Assets
-src/Assets
-=======
 # Logs
 logs
 *.log
@@ -109,4 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
->>>>>>> 8004703f66a32aaa27a79db16f90257ae2b72bf4
+
+assets
+dist
