--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "gulp html",
         "dev": "gulp stream",
         "save": "gulp archiver",
-        "sass": "gulp sassToCss"
+        "sass": "gulp sassToCss",
+        "prepare": "husky install"
     },
     "author": "Myrrdin",
     "license": "ISC",
@@ -25,6 +26,8 @@
         "gulp-tar": "^3.1.0",
         "gulp-watch": "^5.0.1",
         "gulp-zip": "^5.0.1",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.1.2",
         "modernizr": "^3.8.0",
         "node-cron": "^2.0.3",
         "sass": "^1.43.5"
@@ -68,5 +71,15 @@
                 ]
             ]
         ]
-    }
+    },
+    
+        "lint-staged": {
+          "*.(js|html|css|scss)": [
+            "prettier --write"
+          ],
+          "*.js": [
+            "eslint --fix"
+          ]
+        }
+      
 }
