add prettier:write && pre-push check

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "save": "gulp archiver",
         "sass": "gulp sassToCss",
         "prepare": "husky install",
-        "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{ts,css,html}\""
+        "prettier:write": "prettier --config .prettierrc --write \"src/**/*.{js,css,scss,html}\"",
+        "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{js,css,scss,html}\""
     },
     "author": "Myrrdin",
     "license": "ISC",
@@ -75,13 +76,14 @@
         ]
     },
     "lint-staged": {
-        "*.(js|html|css|scss)": [
-            "npm run prettier:check"
+        "src/**/*.{js,css,html}": [
+            "npm run prettier:write"
         ]
     },
     "husky": {
         "hooks": {
-            "pre-commit": "lint-staged"
+            "pre-commit": "lint-staged",
+            "pre-push":" npm run prettier:check"
         }
     }
 }
